--- a/.gitignore
+++ b/.gitignore
@@ -81,6 +81,10 @@ web_modules/
 .env.production.local
 .env.local
 
+# history
+.history/*
+# vscode history
+.vscode/*
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
